--- a/src/SerialLoops/Views/Dialogs/AddScriptCommandDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/AddScriptCommandDialog.axaml
@@ -4,24 +4,33 @@
         xmlns:vm="using:SerialLoops.ViewModels.Dialogs"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:assets="using:SerialLoops.Assets"
+        xmlns:controls="using:SerialLoops.Controls"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         Width="200" Height="150"
+        TransparencyLevelHint="AcrylicBlur"
+        Background="{DynamicResource FallbackBackgroundColor}"
+        ExtendClientAreaToDecorationsHint="True"
+        ExtendClientAreaChromeHints="NoChrome"
         x:DataType="vm:AddScriptCommandDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.AddScriptCommandDialog"
         Title="{x:Static assets:Strings.Add_Command}"
         Name="AddCommandDialog">
-    <StackPanel Orientation="Vertical" Spacing="20" Margin="15">
-        <StackPanel Orientation="Vertical" Spacing="3">
-            <TextBlock Text="{x:Static assets:Strings.Select_Command_Type}"/>
-            <ComboBox ItemsSource="{Binding CommandVerbs}" SelectedItem="{Binding SelectedCommandVerb}"
-                      IsDropDownOpen="True" Name="CommandBox"/>
+    <Panel>
+        <controls:AcrylicBorderHandler/>
+
+        <StackPanel Orientation="Vertical" Spacing="20" Margin="15">
+            <StackPanel Orientation="Vertical" Spacing="3">
+                <TextBlock Text="{x:Static assets:Strings.Select_Command_Type}"/>
+                <ComboBox ItemsSource="{Binding CommandVerbs}" SelectedItem="{Binding SelectedCommandVerb}"
+                          IsDropDownOpen="True" Name="CommandBox"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Spacing="5">
+                <Button Content="{x:Static assets:Strings.Cancel}" Command="{Binding CancelCommand}"
+                        CommandParameter="{Binding #AddCommandDialog}" IsCancel="True"/>
+                <Button Content="{x:Static assets:Strings.Create}" Command="{Binding CreateCommand}"
+                        CommandParameter="{Binding #AddCommandDialog}" IsDefault="True"/>
+            </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" Spacing="5">
-            <Button Content="{x:Static assets:Strings.Cancel}" Command="{Binding CancelCommand}"
-                    CommandParameter="{Binding #AddCommandDialog}" IsCancel="True"/>
-            <Button Content="{x:Static assets:Strings.Create}" Command="{Binding CreateCommand}"
-                    CommandParameter="{Binding #AddCommandDialog}" IsDefault="True"/>
-        </StackPanel>
-    </StackPanel>
+    </Panel>
 </Window>
 
