--- a/src/SerialLoops/Views/Dialogs/ProjectCreationDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/ProjectCreationDialog.axaml
@@ -4,58 +4,61 @@
         xmlns:vm="using:SerialLoops.ViewModels.Dialogs"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:assets="using:SerialLoops.Assets"
-        xmlns:gbox="using:GroupBox.Avalonia.Controls"
+        xmlns:controls="using:SerialLoops.Controls"
         mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="275"
         MinWidth="400" MinHeight="275"
         Width="400" Height="275"
-        Padding="10"
+        TransparencyLevelHint="AcrylicBlur"
+        Background="{DynamicResource FallbackBackgroundColor}"
+        ExtendClientAreaToDecorationsHint="True"
         x:DataType="vm:ProjectCreationDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.ProjectCreationDialog"
         Icon="/Assets/serial-loops.ico"
         Title="{x:Static assets:Strings.Create_New_Project}"
-        Name="PCDialog">
+        Name="PcDialog">
+    <Panel>
+        <controls:AcrylicBorderHandler/>
 
-    <StackPanel Spacing="10" HorizontalAlignment="Center">
-        <gbox:GroupBox Header="{x:Static assets:Strings.Project_Options}" Theme="{StaticResource GroupBoxClassic}"
-                       MinWidth="300" MinHeight="100">
-            <StackPanel Spacing="10" VerticalAlignment="Center" Orientation="Vertical">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Spacing="10">
-                    <TextBlock Text="{x:Static assets:Strings.Name}"/>
-                    <TextBox Name="NameBox" Watermark="Haroohie" Width="150" Text="{Binding ProjectName}"/>
+        <StackPanel Spacing="10" HorizontalAlignment="Center" Margin="10 30">
+            <HeaderedContentControl Header="{x:Static assets:Strings.Project_Options}" MinWidth="300" MinHeight="100">
+                <StackPanel Spacing="10" VerticalAlignment="Center" Orientation="Vertical">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Spacing="10">
+                        <TextBlock Text="{x:Static assets:Strings.Name}"/>
+                        <TextBox Name="NameBox" Watermark="Haroohie" Width="150" Text="{Binding ProjectName}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Spacing="10">
+                        <TextBlock Text="{x:Static assets:Strings.Language_Template}"/>
+                        <ComboBox SelectedItem="{Binding LanguageTemplateItem, Mode=OneWayToSource}" SelectedIndex="0"
+                                  Name="LanguageComboBox">
+                            <ComboBox.Items>
+                                <ComboBoxItem Tag="en" Content="{x:Static assets:Strings.English}"/>
+                                <ComboBoxItem Tag="ja" Content="{x:Static assets:Strings.Japanese}"/>
+                                <ComboBoxItem Tag="zh-Hans" Content="{x:Static assets:Strings.Chinese__Simplified_}"/>
+                                <ComboBoxItem Tag="ru" Content="{x:Static assets:Strings.Russian}"/>
+                                <ComboBoxItem Tag="es" Content="{x:Static assets:Strings.Spanish}"/>
+                                <ComboBoxItem Tag="pt-BR" Content="{x:Static assets:Strings.Portuguese__Brazilian_}"/>
+                                <ComboBoxItem Tag="it" Content="{x:Static assets:Strings.Italian}"/>
+                                <ComboBoxItem Tag="fr" Content="{x:Static assets:Strings.French}"/>
+                                <ComboBoxItem Tag="de" Content="{x:Static assets:Strings.German}"/>
+                                <ComboBoxItem Tag="el" Content="{x:Static assets:Strings.Greek}"/>
+                            </ComboBox.Items>
+                        </ComboBox>
+                    </StackPanel>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Spacing="10">
-                    <TextBlock Text="{x:Static assets:Strings.Language_Template}"/>
-                    <ComboBox SelectedItem="{Binding LanguageTemplateItem, Mode=OneWayToSource}" SelectedIndex="0"
-                              Name="LanguageComboBox">
-                        <ComboBox.Items>
-                            <ComboBoxItem Tag="en" Content="{x:Static assets:Strings.English}"/>
-                            <ComboBoxItem Tag="ja" Content="{x:Static assets:Strings.Japanese}"/>
-                            <ComboBoxItem Tag="zh-Hans" Content="{x:Static assets:Strings.Chinese__Simplified_}"/>
-                            <ComboBoxItem Tag="ru" Content="{x:Static assets:Strings.Russian}"/>
-                            <ComboBoxItem Tag="es" Content="{x:Static assets:Strings.Spanish}"/>
-                            <ComboBoxItem Tag="pt-BR" Content="{x:Static assets:Strings.Portuguese__Brazilian_}"/>
-                            <ComboBoxItem Tag="it" Content="{x:Static assets:Strings.Italian}"/>
-                            <ComboBoxItem Tag="fr" Content="{x:Static assets:Strings.French}"/>
-                            <ComboBoxItem Tag="de" Content="{x:Static assets:Strings.German}"/>
-                            <ComboBoxItem Tag="el" Content="{x:Static assets:Strings.Greek}"/>
-                        </ComboBox.Items>
-                    </ComboBox>
+            </HeaderedContentControl>
+            <HeaderedContentControl Header="{x:Static assets:Strings.Select_ROM}" Padding="5" MinWidth="300" MinHeight="80">
+                <StackPanel Orientation="Horizontal" Spacing="10" VerticalAlignment="Center">
+                    <Button Content="{x:Static assets:Strings.Open_ROM}" Command="{Binding PickRomCommand}"
+                            Name="OpenRomButton"/>
+                    <TextBlock Text="{Binding RomPath}"/>
                 </StackPanel>
+            </HeaderedContentControl>
+            <StackPanel Orientation="Horizontal" Margin="5" Spacing="10">
+                <Button Content="{x:Static assets:Strings.Create}" Command="{Binding CreateCommand}" CommandParameter="{Binding #PcDialog}"
+                        Name="CreateButton"/>
+                <Button Content="{x:Static assets:Strings.Cancel}" Command="{Binding CancelCommand}" CommandParameter="{Binding #PcDialog}"
+                        Name="CancelButton"/>
             </StackPanel>
-        </gbox:GroupBox>
-        <gbox:GroupBox Header="{x:Static assets:Strings.Select_ROM}" Theme="{StaticResource GroupBoxClassic}"
-                       Padding="5" MinWidth="300" MinHeight="80">
-            <StackPanel Orientation="Horizontal" Spacing="10" VerticalAlignment="Center">
-                <Button Content="{x:Static assets:Strings.Open_ROM}" Command="{Binding PickRomCommand}"
-                        Name="OpenRomButton"/>
-                <TextBlock Text="{Binding RomPath}"/>
-            </StackPanel>
-        </gbox:GroupBox>
-        <StackPanel Orientation="Horizontal" Margin="5" Spacing="10">
-            <Button Content="{x:Static assets:Strings.Create}" Command="{Binding CreateCommand}" CommandParameter="{Binding #PCDialog}"
-                    Name="CreateButton"/>
-            <Button Content="{x:Static assets:Strings.Cancel}" Command="{Binding CancelCommand}" CommandParameter="{Binding #PCDialog}"
-                    Name="CancelButton"/>
         </StackPanel>
-    </StackPanel>
+    </Panel>
 </Window>
