--- a/src/SerialLoops/Views/Editors/VoicedLineEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/VoicedLineEditorView.axaml
@@ -6,6 +6,7 @@
              xmlns:assets="using:SerialLoops.Assets"
              xmlns:controls="using:SerialLoops.Controls"
              xmlns:utility="using:SerialLoops.Utility"
+             xmlns:system="using:System"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:VoicedLineEditorViewModel"
              x:Class="SerialLoops.Views.Editors.VoicedLineEditorView">
@@ -44,12 +45,9 @@
                     <CheckBox Content="{x:Static assets:Strings.Force_Drop_Shadow}" IsChecked="{Binding ForceDropShadow}"/>
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="3">
                         <TextBlock Text="{x:Static assets:Strings.Screen_Position}"/>
-                        <StackPanel Orientation="Vertical" Spacing="2">
-                            <RadioButton GroupName="YPos"  IsChecked="{Binding TopY, Mode=TwoWay}" Content="{x:Static assets:Strings.Top}"/>
-                            <RadioButton GroupName="YPos" IsChecked="{Binding BelowTopY, Mode=TwoWay}" Content="{x:Static assets:Strings.Below_Top}"/>
-                            <RadioButton GroupName="YPos" IsChecked="{Binding AboveBottomY, Mode=TwoWay}" Content="{x:Static assets:Strings.Above_Bottom}"/>
-                            <RadioButton GroupName="YPos" IsChecked="{Binding BottomY, Mode=TwoWay}" Content="{x:Static assets:Strings.Bottom}"/>
-                        </StackPanel>
+                        <ListBox ItemsSource="{Binding SubtitlePositions}"
+                                 SelectedItem="{Binding SubtitlePosition}"
+                                 Classes="RadioButtonListBox"/>
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
