--- a/src/SerialLoops/App.axaml
+++ b/src/SerialLoops/App.axaml
@@ -25,6 +25,7 @@
             <NativeMenuItem Header="{x:Static assets:Strings._Check_for_Updates___}"
                             Icon="avares://SerialLoops/Assets/Icons/Update.png" Click="Updates_Click" />
             <NativeMenuItem Header="{x:Static assets:Strings.View__Logs}" Click="Logs_Click" />
+            <NativeMenuItem Header="{x:Static assets:Strings.View_Crash_Log}" Click="CrashLog_Click"/>
         </NativeMenu>
     </NativeMenu.Menu>
 
